--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,92 @@
-body {
-    background-color: #f8f9fa;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
+* {
+  
+  list-style: none;
+  text-decoration: none;
 }
 
-#task-list .completed {
-    text-decoration: line-through;
-    color: gray;
+body{
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: black;
 }
 
-#splash-screen {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff; /* Cor de fundo da splash screen */
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 9999;
+.container{
+  background-color: white;
+  height: 600px;
+  width: 350px;
+  border-radius: 15px;
+  padding: 6px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
 }
 
-.splash-content {
-    text-align: center;
+.topo{
+  width: 100%;
+  height: 50px;
+  background-color: #d9d9d9;
+  border-radius: 15px;
 }
 
-.splash-logo {
-    width: 100px;
-    height: 100px;
+.pai-foto{
+  width: 100%;
+  height: 250px;
+  
+  margin-top: 6px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.splash-title {
-    font-size: 24px;
-    margin-top: 20px;
-    color: #0d6efd; /* Cor do texto do título */
+.filho-foto{
+  margin-top: 50px;
+  border-radius: 100%;
+  width: 165px;
+  height: 165px;
+  background-color: #d9d9d9;
+}
+
+#login{
+  background-color: #d9d9d9;
+  height: 35px;
+  width: 300px;
+  font-weight: bold;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: black;
+}
+
+#senha{
+  background-color: #d9d9d9;
+  height: 35px;
+  width: 300px;
+  font-weight: bold;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: black;
+}
+
+button {
+  
+  
+  background-color: gray;
+  border: none;
+  border-radius: 10px;
+  color: black;;
+  font-size: 16px;
+  cursor: pointer;
+  height: 40px;
+  width: 70px;
+}
+
+h2 {
+  color:black;
+  font-family: "Lato", sans-serif;
 }
