--- a/css/agendamento.css
+++ b/css/agendamento.css
@@ -1,158 +1,120 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 * {
-   
-   list-style: none;
-   text-decoration: none;
-   font-family: "Lato", sans-serif;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
 }
 
-body{
-   margin-top: 30px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   background-color: black;
-
-}
-  
-.container{
-   background-color: white;
-   height: 600px;
-   width: 350px;
-   border-radius: 15px;
-   padding: 6px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-
+body, html {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fffdfd;
+    overflow: hidden; /* Evitar rolagem em dispositivos mÃ³veis */
 }
 
-.topo{
-   width: 100%;
-   height: 50px;
-   background-color: #d9d9d9;
-   border-radius: 15px;
-   display: flex;
-   justify-content: space-between;
+.container {
+    position: relative;
+    width: 100%; /* Ocupar toda a largura da tela */
+    height: 100vh; /* Ocupar toda a altura da tela */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.topo {
+    width: 100%;
+    height: 150px;
+    background-color: white;
+    position: absolute;
+    top: 0; 
+    left: 0;
+    box-shadow: 0 4px rgba(0, 0, 0, .1);
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     
-   
-}
- 
-i{
-   font-size: 25px;
-   margin-top: 12px;
-   margin-left: 5px;
-   color: black;
 }
 
-.pai{
-    margin-top: 25px;
-    font-size: 10px;
+.title {
+    position: absolute;
+    top: 40%; 
+    left: 0;
+    margin-left: 25px; 
+    font-family: "Poppins", sans-serif;
+    color: #E87A30;
+    font-weight: bold;
+    font-size: 25px ;
     display: flex;
-    gap: 100px;
-       
-}
-
-.saldo{
-    background-color: #d9d9d9;
-    border: none;
-    border-radius: 10px;
-    color: black;;
-    font-size: 8px;
-    cursor: pointer;
-    height: 40px;
-    width: 100px; 
-}
-
-.risco{
-    width: 100%;
-    height: 5px;
-    background-color: #d9d9d9;
-    border-radius: 10px;
-    margin-top: 25px;
-}
-
-.s{
-    margin-left: 10px;
-}
-
-.pai2{
-    display: flex;
-    gap: 10px;
-    margin-top: 35px;
-}
-
-.filho2{
-    height: 40px;
-    width: 270px;
-    background-color: #d9d9d9;
-    border-radius: 10px;
-}
-
-.filho3{
-    height: 40px;
-    width: 30px;
-    background-color: #d9d9d9;
-}
-
-.footer {
-    width: 100%;
-    height: 50px;
-    background-color: #d9d9d9;
-    border-radius: 15px;
-    margin-top: 120px;
-}
-
-.pai-botoes{
-    display: flex;
-    justify-content: center; /* Centraliza os botões horizontalmente */
-    align-items: center;    /* Centraliza os botões verticalmente */
-    gap: 10px;              /* Adiciona espaçamento entre os botões */
-    width: 100%;            /* Faz com que o contêiner de botões ocupe toda a largura do popup */
-}
-
-.botao1{
-    background-color: gray;
-    border: none;
-    border-radius: 10px;
-    color: black;
-    font-size: 16px;
-    cursor: pointer;
-    height: 40px;
-    width: 70px;
-    text-align: center;
-    margin-top: 150px;
-}
-
-.botao2{
-    background-color: gray;
-    border: none;
-    border-radius: 10px;
-    color: black;
-    font-size: 16px;
-    cursor: pointer;
-    height: 40px;
-    width: 70px;
-    text-align: center;
-    margin-top: 150px;
-}
-
-.popup {
-    background-color: #fffefe;
-    width: 250px;
-    height: 200px;
-    position: fixed; /* Posiciona em relação à tela */
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); /* Centraliza o popup */
-    display: none;
-    border-radius: 10px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5); /* Sombra para destaque */
-    z-index: 1000; /* Garante que o popup fique acima de outros elementos */
     flex-direction: column;
-    justify-content: flex-end; /* Alinha as divs filhos ao final da div pai */
 }
+
+.balance {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 8px 16px;
+    border-radius: 20px;
+    color: #007bff;
+    font-size: 16px;
+    margin-left: 250px;
+    margin-top: 50px;
+
+}
+
+.balance-icon {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 8px;
+}
+
+img{
+    border-radius: 50%;
+}
+
+.icon {
+    position: absolute;
+    top: 20%; 
+    left: 0;
+    margin-left: 15px; 
+    font-weight: bold;
+    font-size: 25px ;
+}
+
 a{
     color: black;
+}
+
+.box-container {
+    width: 300px;
+    padding: 20px;
+    border: 1px solid #e0e0e0;
+    border-radius: 15px;
+    
+}
+
+.item {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px 0;
+    font-family: "Poppins", sans-serif; 
+    font-weight: bold;
+    /*border-bottom: 1px solid #e0e0e0; borda do meio*/
+}
+
+i {
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.item:last-child {
+    border-bottom: none; /* Remove a linha inferior do Ãºltimo item */
 }
