--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -1,89 +1,117 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 * {
-   
-   list-style: none;
-   text-decoration: none;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
 }
 
-body{
-   margin-top: 30px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   background-color: black;
-
-}
-  
-.container{
-   background-color: white;
-   height: 600px;
-   width: 350px;
-   border-radius: 15px;
-   padding: 6px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-
+body, html {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fffdfd;
+    overflow: hidden; /* Evitar rolagem em dispositivos móveis */
 }
 
-.topo{
-   width: 100%;
-   height: 50px;
-   background-color: #d9d9d9;
-   border-radius: 15px;
-   display: flex;
-   flex-direction: column;
+.container {
+    position: relative;
+    width: 100%; /* Ocupar toda a largura da tela */
+    height: 100vh; /* Ocupar toda a altura da tela */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.topo {
+    width: 100%;
+    height: 150px;
+    background-color: white;
+    position: absolute;
+    top: 0; 
+    left: 0;
+    box-shadow: 0 4px rgba(0, 0, 0, .1);
+    border-radius: 5px;
+}
+
+.title {
+    position: absolute;
+    top: 50%; 
+    left: 0;
+    margin-left: 25px; 
+    font-family: "Poppins", sans-serif;
+    color: #E87A30;
+    font-weight: bold;
+    font-size: 30px ;
+}
+
+.icon {
+    position: absolute;
+    top: 20%; 
+    left: 0;
+    margin-left: 15px; 
+    font-weight: bold;
+    font-size: 25px ;
+}
+
+.form-container {
+    position: relative;
+    width: 100%; /* Ocupar toda a largura da tela */
+    height: 100vh; /* Ocupar toda a altura da tela */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
-i{
-   font-size: 25px;
-   margin-top: 12px;
-   margin-left: 5px;
-   color: black;
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 90%;
+    max-width: 400px;
+    margin-top: 140px;
+    border: none;
 }
 
-.cadastro{
-   margin-top: 50px;
-   margin-bottom: 50px;
-   font-size: 25px;
-   font-weight: bold;
-   font-family: "Lato", sans-serif;
+#input{
+    background-color: #41a3fe;
+    height: 50px;
+    width: 325px;
+    font-weight: bold;
+    border-radius: 10px;
+    border: none;
+    box-shadow: 0 5px rgba(0, 0, 0, 0.1);
+    color: white;
+    margin: 12px 0;
 }
 
-#login{
-   background-color: #d9d9d9;
-   height: 45px;
-   width: 300px;
-   font-weight: bold;
-   border-radius: 10px;
-   border: none;
-   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-   color: black;
-   margin-bottom: 15px;
- }
- 
- #senha{
-   background-color: #d9d9d9;
-   height: 45px;
-   width: 300px;
-   font-weight: bold;
-   border-radius: 10px;
-   border: none;
-   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-   color: black;
-   margin-bottom: 15px;
-}
- 
 button {
-   width: 50%;
-  background-color: gray;
-  border: none;
-  border-radius: 10px;
-  color: black;;
-  font-size: 16px;
-  cursor: pointer;
-  height: 45px;
-  width: 80px;
+    background-color: #392AAB ;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    font-size: 22px;
+    font-weight: bold;
+    font-family: "Poppins", sans-serif;
+    cursor: pointer;
+    height: 50px;
+    width: 130px;
+    margin-left: 58%;
+    margin-top: 5px;
+}
+
+::placeholder {
+    color: white;
+    font-family: "Poppins", sans-serif; 
+
+}
+
+a{
+color: black;
 }
