--- a/css/home.css
+++ b/css/home.css
@@ -1,97 +1,204 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 * {
-   
-   list-style: none;
-   text-decoration: none;
-   font-family: "Lato", sans-serif;
-}
-
-body{
-   margin-top: 30px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-   background-color: black;
-
-}
-  
-.container{
-   background-color: white;
-   height: 600px;
-   width: 350px;
-   border-radius: 15px;
-   padding: 6px;
-   display: flex;
-   flex-direction: column;
-   align-items: center;
-
-}
-
-.topo{
-   width: 100%;
-   height: 50px;
-   background-color: #d9d9d9;
-   border-radius: 15px;
-   display: flex;
-   justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
+    box-sizing: border-box;
     
-   
-}
- 
-i{
-   font-size: 25px;
-   margin-top: 12px;
-   margin-left: 5px;
-   color: black;
 }
 
-.pai{
-    margin-top: 25px;
-    font-size: 10px;
-    display: flex;
-    gap: 100px;
-       
-}
-
-.saldo{
-    background-color: #d9d9d9;
-    border: none;
-    border-radius: 10px;
-    color: black;;
-    font-size: 8px;
-    cursor: pointer;
-    height: 40px;
-    width: 100px; 
-}
-
-.risco{
+body, html {
+    height: 100%;
     width: 100%;
-    height: 5px;
-    background-color: #d9d9d9;
-    border-radius: 10px;
-    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fffdfd;
+    overflow: hidden; /* Evitar rolagem em dispositivos móveis */
 }
 
-.s{
-    margin-left: 10px;
+.container {
+    position: relative;
+    width: 100%; /* Ocupar toda a largura da tela */
+    height: 100vh; /* Ocupar toda a altura da tela */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
 }
 
-.cubo{
-    width: 80%;
-    height: 200px;
-    background-color: #d9d9d9;
-    border-radius: 10px;
+.topo {
+    width: 100%;
+    height: 150px;
+    background-color: white;
+    position: absolute;
+    top: 0; 
+    left: 0;
+    box-shadow: 0 4px rgba(0, 0, 0, .1);
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
 }
 
-.h{
-    height: 35px;
-    width: 80%;
-    border-radius: 10px;
-    background-color: #d9d9d9;
-    margin-bottom: 5px;
-    margin-top: 0px;
+.title {
+    position: absolute;
+    top: 40%; 
+    left: 0;
+    margin-left: 25px; 
+    font-family: "Poppins", sans-serif;
+    color: #392AAB;
+    font-weight: bold;
+    font-size: 25px ;
+    display: flex;
+    flex-direction: column;
+}
+
+.balance {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 8px 16px;
+    border-radius: 20px;
+    color: #007bff;
+    font-size: 16px;
+    margin-left: 250px;
+
+}
+
+.balance-icon {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 8px;
+}
+
+span {
+    background-color: #41a3fe ;
+    border: none;
+    border-radius: 10px;
+    color: white;
+    cursor: pointer;
+    height: 30px;
+    width: 70px;
+    padding: 5px;
+}
+
+h6 {
+ color: grey;
+}
+
+img{
+    border-radius: 50%;
+}
+
+.title {
+    top: 25%;
+    color: #E87A30;
+    font-size: 25px;
+}
+
+.box {
+    width: 350px;
+    padding: 10px;
+    border: 2px solid #E0E0E0;
+    border-radius: 50px;
+    background-color: #F5F5F5;
+    margin-top: 120px;
+    
+}   
+
+.lavagem {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 10px;
+    padding: 10px;
+    
+    white-space: nowrap; /* Garante que o texto não quebre */
+}
+
+.lavagem:last-child {
+    border-bottom: none;
+}
+
+.nome-lavagem {
+    font-weight: bold;
+    color: #333;
+    background-color: #F5F5F5;
+    font-family: "Poppins", sans-serif;
+    font-size: 20px;
+}
+
+.tempo-lavagem {
+    background-color: #00AFFF;
+    color: white;
+    padding: 5px 25px;
+    border-radius: 15px;
+    font-size: 12px;
+    white-space: nowrap; /* Garante que o texto não quebre */
+    cursor: pointer;
+    height: 25px;
+    width: 80px;
+    font-weight: bold;
+    margin-top: 10px;
+    
+}
+
+.sub-title {
+    font-size: 20px;
+    color: #E87A30;
+    font-family: "Poppins", sans-serif;
+    font-size: 25px;
+    align-self: flex-start; 
+    margin-left: 25px;
+    margin-top: 20px;
+}
+
+.box-agenda{
+    width: 350px;
+    padding: 10px;
+    border: 2px solid #E0E0E0;
+    border-radius: 50px;
+    background-color: #F5F5F5;
+    margin-top: 10px;
+    height: 150px;
+    display: flex;
+    flex-direction: column; 
+    justify-content: center; 
+    align-items: center;
+}
+
+.agenda-lavadora {
+    background-color: #392AAB;
+    color: white;
+    padding: 8px 50px;
+    border-radius: 10px;
+    font-size: 12px;
+    white-space: nowrap; /* Garante que o texto não quebre */
+    cursor: pointer;
+    height: 40px;
+    width: 250px;
+    font-weight: bold;
+    margin-top: 10px;
+    font-size: 20px;
+}
+
+.agenda-secadora {
+    background-color: #392AAB;
+    color: white;
+    padding: 8px 50px;
+    border-radius: 10px;
+    font-size: 12px;
+    white-space: nowrap; /* Garante que o texto não quebre */
+    cursor: pointer;
+    height: 40px;
+    width: 250px;
+    font-weight: bold;
+    margin-top: 10px;
+    font-size: 20px;
 }
