--- a/css/agendamento.css
+++ b/css/agendamento.css
@@ -16,7 +16,7 @@ body, html {
     justify-content: center;
     align-items: center;
     background-color: #fffdfd;
-    overflow: hidden; /* Evitar rolagem em dispositivos móveis */
+    
 }
 
 .container {
@@ -117,4 +117,54 @@ i {
 
 .item:last-child {
     border-bottom: none; /* Remove a linha inferior do último item */
+}
+
+.popup-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    font-family: "Poppins", sans-serif;
+}
+
+.popup-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    
+}
+
+.popup-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    
+}
+
+button {
+    padding: 10px 40px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn-azul {
+    background-color: #4da8f0;
+    color: white;
+}
+
+.btn-roxo {
+    background-color: #4a36f0;
+    color: white;
+}
+
+button:hover {
+    opacity: 0.8;
 }
