--- a/css/login.css
+++ b/css/login.css
@@ -1,17 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     list-style: none;
     text-decoration: none;
     background-color: #fffdfd;
-    
 }
 
+html, body {
+    height: 100%;
+}
+
+.main-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Faz a altura ocupar toda a tela */
+    padding: 20px;
+}
 
 .container {
-    height: 250px;
     display: flex;
     justify-content: center;
     align-items: center; 
@@ -20,33 +31,24 @@
 .img {
     height: 200px;
     width: 200px;
-    margin-top: 50px;
 }
 
 .title {
-    display: flex;
-    justify-content: flex-start;
-    margin: 30px;
     color: #E87A30;
     font-weight: bold;
-    font-size: 30px ;
+    font-size: 30px;
     font-family: "Poppins", sans-serif;
+    margin-bottom: 20px;
 }
 
-.form{
+.form {
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-    
 }
 
-::placeholder {
-    color: white;
-    font-family: "Poppins", sans-serif;
-
-}
-
-#login{
+input {
     background-color: #41a3fe;
     height: 50px;
     width: 300px;
@@ -55,21 +57,11 @@
     border: none;
     box-shadow: 0  5px rgba(0, 0, 0, 0.1);
     color: white;
+    margin-bottom: 15px;
 }
-  
-#senha{
-    background-color: #41a3fe;
-    height: 50px;
-    width: 300px;
-    font-weight: bold;
-    border-radius: 10px;
-    border: none;
-    box-shadow: 0 5px rgba(0, 0, 0, 0.1);
-    color: white;
-}
-  
+
 button {
-    background-color: #392AAB ;
+    background-color: #392AAB;
     border: none;
     border-radius: 10px;
     color: white;
@@ -79,21 +71,27 @@ button {
     cursor: pointer;
     height: 50px;
     width: 110px;
-    
 }
 
 .actions {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
+    width: 100%;
+    max-width: 320px;
     font-family: "Poppins", sans-serif;
     color: #E87A30;
     font-weight: bold;
-    font-size: 30px ;
+    font-size: 20px;
     gap: 25px;
 }
 
-a{
+a {
     color: #E87A30;
+    font-size: 20px;
 }
 
+::placeholder {
+    color: white;
+    font-family: "Poppins", sans-serif;
+}
