--- a/css/agenda.css
+++ b/css/agenda.css
@@ -21,13 +21,14 @@ body, html {
 
 .container {
     position: relative;
-    width: 100%; /* Ocupar toda a largura da tela */
-    height: 100vh; /* Ocupar toda a altura da tela */
+    width: 100%;
+    height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start; 
+    align-items: center; 
     flex-direction: column;
-    row-gap: 60px;
+    row-gap: 20px;
+    padding-top: 200px; 
 }
 
 .topo {
@@ -94,79 +95,33 @@ a{
     color: black;
 }
 
-.box-container {
-    width: 300px;
-    padding: 20px;
-    border: 1px solid #e0e0e0;
-    border-radius: 15px;
-    
-}
-
-.item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px 0;
-    font-family: "Poppins", sans-serif; 
-    font-weight: bold;
-    /*border-bottom: 1px solid #e0e0e0; borda do meio*/
-}
-
-i {
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.item:last-child {
-    border-bottom: none; /* Remove a linha inferior do último item */
-}
-
-.popup-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    font-family: "Poppins", sans-serif;
-}
-
-.popup-content {
-    background-color: white;
-    padding: 20px;
+.calendario {
+    width: 80%; 
+    height: 250px;
+    background-image: url('https://michelzbinden.com/pt/2024/calendario-setembro-2024-46sd.webp');
+    background-size: contain; /* Faz o calendário se ajustar ao container sem cortar */
+    background-position: center;
+    background-repeat: no-repeat;
     border-radius: 10px;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    
+    margin: 0 auto; 
 }
 
-.popup-buttons {
+.horario-container {
     display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-    
+    flex-direction: column;
+    gap: 20px; 
+    width: 100%;
+    max-width: 300px; 
+    margin: 0 auto; 
 }
 
-button {
-    padding: 10px 40px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.btn-azul {
-    background-color: #4da8f0;
+.horario {
+    background-color: #3A0CA3;
     color: white;
-}
-
-.btn-roxo {
-    background-color: #4a36f0;
-    color: white;
-}
-
-button:hover {
-    opacity: 0.8;
+    padding: 10px 20px;
+    border-radius: 15px;
+    text-align: left;
+    font-weight: bold;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    font-size: 16px;
 }
