--- a/css/agenda.css
+++ b/css/agenda.css
@@ -28,7 +28,8 @@ body, html {
     align-items: center; 
     flex-direction: column;
     row-gap: 20px;
-    padding-top: 200px; 
+    padding-top: 200px;
+    padding-bottom: 20px; 
 }
 
 .topo {
@@ -99,7 +100,7 @@ a{
     width: 80%; 
     height: 250px;
     background-image: url('https://michelzbinden.com/pt/2024/calendario-setembro-2024-46sd.webp');
-    background-size: contain; /* Faz o calendário se ajustar ao container sem cortar */
+    background-size: contain; 
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 10px;
@@ -109,7 +110,7 @@ a{
 .horario-container {
     display: flex;
     flex-direction: column;
-    gap: 20px; 
+    gap: 15px; 
     width: 100%;
     max-width: 300px; 
     margin: 0 auto; 
@@ -118,10 +119,67 @@ a{
 .horario {
     background-color: #3A0CA3;
     color: white;
-    padding: 10px 20px;
+    padding: 10px 15px;
     border-radius: 15px;
     text-align: left;
     font-weight: bold;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     font-size: 16px;
+}
+
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4); 
+    justify-content: center;
+    align-items: center;
+    font-family: "Poppins", sans-serif;
+}
+
+.modal-content {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+    width: 80%;
+    max-width: 400px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: center;
+}
+
+.modal-buttons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.modal-buttons .btn {
+    padding: 10px 20px;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+.cancelar {
+    background-color: #1E90FF;
+    color: white;
+}
+
+.agendar {
+    background-color: #3A0CA3;
+    color: white;
+}
+
+.close {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 24px;
+    cursor: pointer;
 }
