--- a/css/agendamento.css
+++ b/css/agendamento.css
@@ -96,7 +96,7 @@ a{
 
 .box-container {
     width: 300px;
-    padding: 20px;
+    padding: 10px;
     border: 1px solid #e0e0e0;
     border-radius: 15px;
     
@@ -106,10 +106,10 @@ a{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 0;
+    padding: 15px 0;
     font-family: "Poppins", sans-serif; 
     font-weight: bold;
-    /*border-bottom: 1px solid #e0e0e0; borda do meio*/
+    border-bottom: 1px solid #e0e0e0;
 }
 
 i {
