--- a/css/cadastro.css
+++ b/css/cadastro.css
@@ -16,13 +16,13 @@ body, html {
     justify-content: center;
     align-items: center;
     background-color: #fffdfd;
-    overflow: hidden; /* Evitar rolagem em dispositivos móveis */
+    
 }
 
 .container {
     position: relative;
-    width: 100%; /* Ocupar toda a largura da tela */
-    height: 100vh; /* Ocupar toda a altura da tela */
+    width: 100%; 
+    height: 100vh; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,8 +61,8 @@ body, html {
 
 .form-container {
     position: relative;
-    width: 100%; /* Ocupar toda a largura da tela */
-    height: 100vh; /* Ocupar toda a altura da tela */
+    width: 100%; 
+    height: 100vh; 
     display: flex;
     justify-content: center;
     align-items: center;
