--- a/css/home.css
+++ b/css/home.css
@@ -8,7 +8,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden; /* Evitar rolagem desnecessária */
+    
 }
 
 .container {
@@ -17,9 +17,9 @@ body, html {
     height: 100vh; 
     display: flex;
     flex-direction: column;
-    justify-content: flex-start; /* Garantir que o conteúdo comece do topo */
+    justify-content: flex-start;
     align-items: center;
-    padding: 20px 10px; /* Adicionando padding para espaçamento nas laterais */
+    padding: 20px 10px; 
     overflow-y: auto; /* Permitindo rolagem caso o conteúdo ultrapasse a altura */
 }
 
@@ -32,7 +32,7 @@ body, html {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 15px; /* Espaçamento interno */
+    padding: 15px; 
 }
 
 .title {
@@ -72,8 +72,8 @@ img {
 }
 
 .box {
-    width: 100%; 
-    max-width: 350px; /* Limitar a largura máxima */
+    width: 85%; 
+    max-width: 350px; 
     padding: 15px;
     border: 2px solid #E0E0E0;
     border-radius: 20px;
@@ -86,11 +86,11 @@ img {
     justify-content: space-between;
     align-items: center;
     margin-bottom: 15px;
-    padding: 10px 15px;
+    padding: 10px 0px;
     background-color: white; 
     border-radius: 20px;
-    
-    color: white; /* Texto branco */
+    color: white; 
+    white-space: nowrap;
 }
 
 .nome-lavagem {
@@ -100,7 +100,9 @@ img {
     font-size: 18px;
     background-color: transparent; 
     padding: 0; 
-    font-family: "Poppins", sans-serif;
+    white-space: nowrap;
+    margin-right: 20px;
+
 }
 
 .tempo-lavagem {
@@ -109,7 +111,7 @@ img {
     padding: 5px 20px;
     border-radius: 15px;
     font-size: 14px;
-    border: none; /* Remover qualquer borda */
+    border: none;
 }
 
 
@@ -127,28 +129,38 @@ a{
 }
 
 .box-agenda {
-    width: 100%; 
-    max-width: 350px;
+    width: 85%; 
+    max-width: 300px;
     padding: 15px;
     border: 2px solid #E0E0E0;
     border-radius: 20px;
-    background-color: #F5F5F5;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: "Poppins", sans-serif;
+    
 }
 
 .agenda-lavadora, .agenda-secadora {
-    background-color: #392AAB; /* Mesma cor dos agendamentos */
+    background-color: #392AAB; 
     color: white;
     padding: 10px;
     border-radius: 20px;
     font-size: 18px;
     margin-top: 15px;
-    width: 100%;
+    width: 100%; 
     text-align: center;
     cursor: pointer;
     border: 2px solid #E0E0E0;
+    
+}
+
+.agenda-secadora {
+    width: 80%;
+}
+
+.agenda-lavadora{
+    margin-left: 19px;
+    width: 110%;
 }
